// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Header matches snapshot when user is logged in 1`] = `
<DocumentFragment>
  <header
    class="bg-white border-b-2 border-gray-200 sticky top-0 z-50 shadow-sm"
  >
    <div
      class="container mx-auto lg:max-w-7xl px-4 py-3"
    >
      <div
        class="flex items-center justify-between"
      >
        <div
          class="flex-shrink-0"
        >
          <a
            class="flex items-center space-x-2 hover:opacity-80 transition-opacity"
            href="/"
          >
            <img
              alt="MiniCom Logo"
              class="w-[150px] h-auto"
              height="0"
              sizes="100vw"
              src="/logo-brand-header.jpg"
              width="0"
            />
          </a>
        </div>
        <nav
          class="hidden lg:flex items-center gap-6 lg:gap-8 text-cyan-800"
        >
          <a
            class="font-bold transition-colors hover:text-cyan-600"
            href="/categories/pens"
          >
            Pens
          </a>
          <a
            class="font-bold transition-colors hover:text-cyan-600"
            href="/categories/notebooks"
          >
            Notebooks
          </a>
          <a
            class="font-bold transition-colors hover:text-cyan-600"
            href="/categories/staplers-staples"
          >
            Staplers
          </a>
          <a
            class="font-bold transition-colors hover:text-cyan-600"
            href="/categories/sticky-notes"
          >
            Sticky Notes
          </a>
          <a
            class="font-bold transition-colors hover:text-cyan-600"
            href="/categories/desk-organizers"
          >
            Organizers
          </a>
          <div
            class="flex items-center relative "
          >
            <input
              class="pl-10 pr-4 py-2 w-48 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-cyan-500 focus:border-transparent text-sm"
              placeholder="Search products..."
              type="text"
            />
            <svg
              aria-hidden="true"
              class="absolute left-3 w-4 h-4 text-gray-400"
              data-slot="icon"
              fill="none"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </div>
        </nav>
        <div
          class="flex items-center gap-3"
        >
          <div
            class="flex items-center relative lg:hidden"
          >
            <input
              class="pl-8 pr-3 py-2 w-32 sm:w-40 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-cyan-500 focus:border-transparent text-sm"
              placeholder="Search..."
              type="text"
            />
            <svg
              aria-hidden="true"
              class="absolute left-2 w-4 h-4 text-gray-400"
              data-slot="icon"
              fill="none"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </div>
          <div
            class="hidden md:flex items-center gap-5"
          >
            <div
              data-testid="user-menu"
            />
          </div>
          <div
            data-testid="cart-icon"
          />
        </div>
      </div>
    </div>
  </header>
</DocumentFragment>
`;

exports[`Header matches snapshot when user is not logged in 1`] = `
<DocumentFragment>
  <header
    class="bg-white border-b-2 border-gray-200 sticky top-0 z-50 shadow-sm"
  >
    <div
      class="container mx-auto lg:max-w-7xl px-4 py-3"
    >
      <div
        class="flex items-center justify-between"
      >
        <div
          class="flex-shrink-0"
        >
          <a
            class="flex items-center space-x-2 hover:opacity-80 transition-opacity"
            href="/"
          >
            <img
              alt="MiniCom Logo"
              class="w-[150px] h-auto"
              height="0"
              sizes="100vw"
              src="/logo-brand-header.jpg"
              width="0"
            />
          </a>
        </div>
        <nav
          class="hidden lg:flex items-center gap-6 lg:gap-8 text-cyan-800"
        >
          <a
            class="font-bold transition-colors hover:text-cyan-600"
            href="/categories/pens"
          >
            Pens
          </a>
          <a
            class="font-bold transition-colors hover:text-cyan-600"
            href="/categories/notebooks"
          >
            Notebooks
          </a>
          <a
            class="font-bold transition-colors hover:text-cyan-600"
            href="/categories/staplers-staples"
          >
            Staplers
          </a>
          <a
            class="font-bold transition-colors hover:text-cyan-600"
            href="/categories/sticky-notes"
          >
            Sticky Notes
          </a>
          <a
            class="font-bold transition-colors hover:text-cyan-600"
            href="/categories/desk-organizers"
          >
            Organizers
          </a>
          <div
            class="flex items-center relative "
          >
            <input
              class="pl-10 pr-4 py-2 w-48 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-cyan-500 focus:border-transparent text-sm"
              placeholder="Search products..."
              type="text"
            />
            <svg
              aria-hidden="true"
              class="absolute left-3 w-4 h-4 text-gray-400"
              data-slot="icon"
              fill="none"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </div>
        </nav>
        <div
          class="flex items-center gap-3"
        >
          <div
            class="flex items-center relative lg:hidden"
          >
            <input
              class="pl-8 pr-3 py-2 w-32 sm:w-40 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-cyan-500 focus:border-transparent text-sm"
              placeholder="Search..."
              type="text"
            />
            <svg
              aria-hidden="true"
              class="absolute left-2 w-4 h-4 text-gray-400"
              data-slot="icon"
              fill="none"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </div>
          <div
            class="hidden md:flex items-center gap-5"
          >
            <a
              class="flex items-center gap-2 text-cyan-800 hover:text-cyan-600 transition-colors"
              data-testid="login-link"
              href="/login"
            >
              <svg
                aria-hidden="true"
                class="w-5 h-5"
                data-slot="icon"
                fill="none"
                stroke="currentColor"
                stroke-width="1.5"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15.75 6a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0ZM4.501 20.118a7.5 7.5 0 0 1 14.998 0A17.933 17.933 0 0 1 12 21.75c-2.676 0-5.216-.584-7.499-1.632Z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
            </a>
          </div>
          <div
            data-testid="cart-icon"
          />
        </div>
      </div>
    </div>
  </header>
</DocumentFragment>
`;
